# sndslib

./: .gitignore  .pyup.yml  .travis.yml  README.md  pyproject.toml  snds.py  sndslib.py
.github/workflows/: ci.yml
sndslib/: __init__.py  __main__.py  cli.py  exceptions.py  snds.py  sndslib.py  utils.py
tests/: conftest.py  test_cli.py  test_sndslib.py
tests/integration/: test_cli_integration.py
tests/unit/: test_cli.py  test_sndslib.py
