[tool.poetry]
name = "sndslib"
version = "0.1.4"
description = "Process and verify data from SNDS easily"
authors = ["undersfx <undersoft.corp@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/undersfx/sndslib"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"
pytest = "^7.1.2"

[tool.poetry.scripts]
snds = 'sndslib.cli:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

